fix overflow

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -86,7 +86,7 @@
     .c-wrapper {
       margin-top: 20px;
       flex-direction: column;
-      padding: 0px 50px;
+      /* padding: 0px 50px; */
     }
   
     .c-title {
@@ -104,6 +104,7 @@
   
     form {
       margin-top: 0px;
+      margin-right: 0px;
       display: flex;
       flex-wrap: wrap;
     }
