--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -90,7 +90,7 @@
     }
   
     .i-desc{
-      /* margin-top: 30px; */
+      margin-top: 30px;
     }
     
   }
