--- a/src/components/product List/productList.css
+++ b/src/components/product List/productList.css
@@ -40,12 +40,13 @@
     } */
 
     .pl-list{
-        width: 600px;
+        width: 400px;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow-x: hidden;
     }
 
     .pl-title{
